<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string-array name="alignment_format_array">
        <item>Left</item>
        <item>Center</item>
        <item>Right</item>
    </string-array>
    <string-array name="clock_type_array">
        <item>None</item>
        <item>Digital</item>
        <item>Binary</item>
        <item>Analog 0</item>
        <item>Analog 1</item>
        <item>Analog 2</item>
        <item>Analog 3</item>
        <item>Analog 4</item>
        <item>Analog 6</item>
        <item>Analog 12</item>
        <item>Analog 60</item>
    </string-array>
    <string-array name="quick_button_array">
        <item>Show</item>
        <item>Hide</item>
    </string-array>
    <string-array name="search_bar_position_array">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>
    <string-array name="themes_array">
        <item>System default</item>
        <item>Midnight</item>
        <item>Jupiter</item>
        <item>Teal</item>
        <item>Candy</item>
        <item>Pastel</item>
        <item>Noon</item>
        <item>Vlad</item>
        <item>Groovy</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Cyan</item>
        <item>Blue</item>
        <item>Lilac</item>
    </string-array>
    <string-array name="dark_mode_array">
        <item>System default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="font_array">
        <item>Ubuntu</item>
        <item>Sans Serif</item>
        <item>Serif</item>
        <item>Monospace</item>
        <item>Cursive</item>
    </string-array>
    <string-array name="time_format_array">
        <item>Follow system settings</item>
        <item>24 Hour</item>
        <item>12 Hour</item>
    </string-array>
    <string-array name="date_format_array">
        <item>Follow system settings</item>
        <item>No date</item>
        <item>Short system format</item>
        <item>Medium system format</item>
        <item>2024-04-01</item>
        <item>Mon 2024-04-01</item>
        <item>Monday</item>
    </string-array>
    <string-array name="lead0_modif_array">
        <item>Follow system settings</item>
        <item>Prefer 1, 2, 3, ...</item>
        <item>Prefer 01, 02, 03, ...</item>
    </string-array>

    <!--
    Preparations to translate to Tircunan (lang-code: qtk), unknown to Java
    This is only basic support, not all date/time formats are patched to
    support this.
    -->
    <string-array name="day_names">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="day_abbrs">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="mon_names">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="mon_abbrs">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string name="prefs_settings_use_qtk_locale" translatable="false">use_qtk_locale</string>

    <string name="options_fragment_use_conlang">Tircunan locale</string>
    <string name="options_fragment_use_conlang_true">Use custom Tircunan locale (qtk).</string>
    <string name="options_fragment_use_conlang_false">Use application locale.</string>

    <string name="sys_date_short"></string>
    <string name="sys_date_medium"></string>

    <string name="app_name" translatable="false">Unlauncher</string>
    <string name="main_placeholder_clock" translatable="false">00:00</string>
    <string name="main_placeholder_date" translatable="false">Sat, Apr 20</string>
    <string name="prefs_settings" translatable="false">settings</string>
    <string name="prefs_settings_key_theme" translatable="false">key_theme</string>
    <string name="prefs_settings_key_dark_mode" translatable="false">dark_mode</string>
    <string name="prefs_settings_key_font" translatable="false">theme_font</string>
    <string name="prefs_settings_key_time_format" translatable="false">time_format</string>
    <string name="prefs_settings_key_date_format" translatable="false">date_format</string>
    <string name="prefs_settings_key_lead0_modif" translatable="false">lead0_modif</string>
    <string name="prefs_settings_key_toggle_status_bar" translatable="false">hide_status_bar</string>

    <string name="add_apps_fragment_search_apps">Search</string>
    <string name="app_info">App info</string>
    <string name="choose_alignment_dialog_title">Alignment</string>
    <string name="choose_clock_type_dialog_title">Clock type</string>
    <string name="choose_search_bar_position_dialog_title">Search bar position</string>
    <string name="choose_theme_dialog_title">Theme</string>
    <string name="choose_time_format_dialog_title">Time format</string>
    <string name="choose_date_format_dialog_title">Date format</string>
    <string name="choose_lead0_modif_dialog_title">Leading 0</string>
    <string name="content_description_back">Back</string>
    <string name="customize_apps_fragment_add">Add</string>
    <string name="customize_apps_fragment_remove_all">Remove all</string>
    <string name="options_fragment_open_keyboard">Open keyboard</string>
    <string name="options_fragment_open_keyboard_subtitle">Display keyboard when showing the app drawer</string>
    <string name="options_fragment_search_all">Search all apps</string>
    <string name="options_fragment_search_all_subtitle">Hidden apps can be found when searching</string>
    <string name="options_fragment_search_bar_position">Search bar position</string>
    <string name="options_fragment_choose_lead0_modif">Leading zero</string>
    <string name="customize_app_drawer_fragment_show_headings">Group by initial</string>
    <string name="customize_app_drawer_fragment_show_headings_subtitle">Group apps and show heading for each initial</string>
    <string name="customize_app_drawer_fragment_show_search_bar">Search bar</string>
    <string name="options_fragment_visible_apps">Drawer apps</string>
    <string name="hidden">hidden</string>
    <string name="hide_app">Hide app</string>
    <string name="main_date_format">EEE, MMM dd</string>
    <string name="iso_date_format" translatable="false">yyyy-MM-dd</string>
    <string name="iso_wday_date_format" translatable="false">EEE yyyy-MM-dd</string>
    <string name="wday_date_format" translatable="false">EEEE</string>
    <string name="main_fragment_options">Options</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_reset">Reset</string>
    <string name="open_app">Open app</string>
    <string name="options_fragment_change_theme">Theme</string>
    <string name="options_fragment_dark_mode">Dark mode</string>
    <string name="choose_dark_mode_dialog_title">Dark mode</string>
    <string name="options_fragment_font">Font</string>
    <string name="choose_font_dialog_title">Font</string>
    <string name="options_fragment_choose_alignment">App alignment</string>
    <string name="options_fragment_choose_clock_type">Clock type</string>
    <string name="options_fragment_choose_date_format">Date format</string>
    <string name="options_fragment_choose_time_format">Time format</string>
    <string name="options_fragment_customize_apps">Home apps</string>
    <string name="options_fragment_appearance">Appearance</string>
    <string name="options_fragment_clock">Clock</string>
    <string name="options_fragment_drawer">Drawer</string>
    <string name="options_fragment_customize_quick_buttons">Quick buttons</string>
    <string name="options_fragment_toggle_status_bar">Toggle Status Bar</string>
    <string name="remove_all_apps_dialog_message">"This action will not uninstall your apps."
    "It is just to confirm if you're clearing this list on purpose"</string>
    <string name="remove_all_apps_dialog_title">Remove all apps</string>
    <string name="rename_app">Rename app</string>
    <string name="shown">shown</string>
    <string name="uninstall">Uninstall</string>
    <string name="remove_shortcut">Unpin</string>
    <string name="action_add_shortcut">Add to app drawer</string>
    <string name="unhide_hint">Unhide under Options &gt; Drawer apps</string>
    <string name="unable_to_unpin">Unable to unpin.</string>
    <string name="shortcut_unpinned">Shortcut unpinned</string>
    <string name="couldnt_start_app">Unable to start app</string>
    <string name="couldnt_start_shortcut">Unable to start shortcut</string>
    <string name="customize_app_drawer_fragment_wallpaper_not_default_launcher">App needs to be default launcher</string>
    <string name="customize_app_drawer_fragment_wallpaper_enabled">Theme background defines the wallpaper.</string>
    <string name="customize_app_drawer_fragment_wallpaper_disabled">The wallpaper is left as is.</string>
    <string name="customize_app_drawer_fragment_wallpaper_text">Manage wallpaper</string>
    <string name="customize_app_drawer_search_bar_enabled">Search bar is shown.</string>
    <string name="customize_app_drawer_search_bar_disabled">Search bar is hidden.</string>
</resources>
