<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/options_fragment"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/margin_sides"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_top_small"
    android:layout_width="match_parent"
    tools:context=".ui.options.OptionsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:contentDescription="@string/content_description_back"
        android:id="@+id/options_fragment_back"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/padding"
        android:paddingStart="0px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/options_fragment_title"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/main_fragment_options"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="?headerTextColor"
        android:textSize="@dimen/font_size_customize_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/options_fragment_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_fragment_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_100sdp">

            <TextView
                android:id="@+id/options_fragment_customize_apps"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_customize_apps"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/options_fragment_visible_apps"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_visible_apps"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_customize_apps" />

            <TextView
                android:id="@+id/options_fragment_customize_quick_buttons"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_customize_quick_buttons"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_visible_apps" />

            <!-- Appearance -->
            <TextView
                android:id="@+id/options_section_appearance"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_appearance"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?headerTextColor"
                android:textSize="@dimen/font_size_customize_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_customize_quick_buttons" />

            <TextView
                android:id="@+id/options_fragment_change_theme"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_change_theme"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_section_appearance" />

            <TextView
                android:id="@+id/options_fragment_dark_mode"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_dark_mode"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_change_theme" />

            <TextView
                android:id="@+id/options_fragment_font"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_font"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_dark_mode" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_auto_device_theme_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:textColor="?switchTextColor"
                android:text="@string/customize_app_drawer_fragment_wallpaper_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_font" />

            <TextView
                android:id="@+id/options_fragment_choose_alignment"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_choose_alignment"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_auto_device_theme_wallpaper" />

            <TextView
                android:id="@+id/options_fragment_toggle_status_bar"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_toggle_status_bar"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_choose_alignment" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_use_conlang_switch"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_use_conlang"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?switchTextColor"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_toggle_status_bar" />

            <!-- Drawer -->
            <TextView
                android:id="@+id/options_section_drawer"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_drawer"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?headerTextColor"
                android:textSize="@dimen/font_size_customize_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_use_conlang_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_show_headings_switch"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/customize_app_drawer_fragment_show_headings"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?switchTextColor"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_section_drawer" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_show_search_field_switch"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/customize_app_drawer_fragment_show_search_bar"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?switchTextColor"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_show_headings_switch" />

            <TextView
                android:id="@+id/options_fragment_search_field_position"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_search_bar_position"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_show_search_field_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_open_keyboard_switch"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_open_keyboard"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?switchTextColor"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_search_field_position" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_search_all_switch"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_search_all"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?switchTextColor"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_open_keyboard_switch" />

            <!-- Clock -->
            <TextView
                android:id="@+id/options_section_clock"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_clock"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="?headerTextColor"
                android:textSize="@dimen/font_size_customize_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_search_all_switch" />

            <TextView
                android:id="@+id/options_fragment_choose_clock_type"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_choose_clock_type"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_section_clock" />

            <TextView
                android:id="@+id/options_fragment_choose_time_format"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_choose_time_format"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_choose_clock_type" />

            <TextView
                android:id="@+id/options_fragment_choose_date_format"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_choose_date_format"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_choose_time_format" />

            <TextView
                android:id="@+id/options_fragment_choose_lead0_modif"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:layout_width="match_parent"
                android:text="@string/options_fragment_choose_lead0_modif"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_choose_date_format" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
