<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/customize_apps_fragment"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/margin_sides"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_top_small"
    android:layout_width="match_parent"
    tools:context=".ui.options.CustomizeAppsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:contentDescription="@string/content_description_back"
        android:id="@+id/customize_apps_fragment_back"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/padding"
        android:paddingStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/customize_apps_fragment_title"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/options_fragment_customize_apps"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="?headerTextColor"
        android:textSize="@dimen/font_size_customize_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/customize_apps_fragment_back"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customize_apps_fragment_list"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_small"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customize_apps_fragment_title"
        tools:itemCount="5"
        tools:listitem="@layout/customize_apps_fragment_list_item" />
    <TextView
        android:id="@+id/customize_apps_fragment_add"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_small"
        android:layout_width="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/customize_apps_fragment_add"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_size_add_apps_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/customize_apps_fragment_remove_all"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_small"
        android:layout_width="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/customize_apps_fragment_remove_all"
        android:textSize="@dimen/font_size_add_apps_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
