<?xml version="1.0" encoding="utf-8"?>
<merge
    android:layout_marginEnd="@dimen/margin_sides_small"
    android:layout_marginStart="@dimen/margin_sides_small"
    tools:showIn="@layout/home_fragment_default"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:ems="10"
        android:hint="@string/add_apps_fragment_search_apps"
        android:id="@+id/app_drawer_edit_text"
        android:imeOptions="actionDone"
        android:inputType="none|textNoSuggestions|textCapWords"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_width="0dp"
        android:padding="@dimen/padding"
        android:textColor="?controlTextColor"
        android:textColorHint="?controlHintColor"
        android:textSize="@dimen/font_size_drawer_search"
        tools:ignore="Autofill,LabelFor" />

    <ImageView
        android:id="@+id/home_fragment_call"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/padding"
        app:srcCompat="@drawable/ic_call"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/home_fragment_camera"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/padding"
        app:srcCompat="@drawable/ic_photo_camera"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/home_fragment_options"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/padding"
        app:srcCompat="@drawable/ic_cog"
        tools:ignore="ContentDescription" />

    <com.sduduzog.slimlauncher.ui.main.BinaryClockView
        android:id="@+id/home_fragment_bin_time"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        custom:bitSize="20"
        custom:border="2"
        custom:distance="10" />

    <com.sduduzog.slimlauncher.ui.main.AnalogClockView
        android:id="@+id/home_fragment_analog_time"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        custom:radius="@dimen/_60sdp"
        custom:rim="0" />

    <TextView
        android:id="@+id/home_fragment_time"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_width="wrap_content"
        android:text="@string/main_placeholder_clock"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="?clockTextColor"
        android:textSize="@dimen/font_size_home_clock" />

    <TextView
        android:id="@+id/home_fragment_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/_4sdp"
        android:text="@string/main_placeholder_date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="?clockTextColor"
        android:textSize="@dimen/font_size_home_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_list"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/main_fragment_list_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_list_exp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/main_fragment_list_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/app_drawer_fragment_list"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/add_app_fragment_list_item" />
</merge>
